--- a/index.html
+++ b/index.html
@@ -9,27 +9,46 @@
   <body>
     <div class="container">
       <div class="form-container">
-        <form class="form">
+        <form class="form" id="form">
           <h1>Contact us</h1>
-          <p>
+          <p class="form__info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
             odit exercitationem quod quo similique?
           </p>
           <div class="form__input-container">
             <label for="">Username</label>
-            <input type="text" name="username" class="form__input" />
+            <input
+              type="text"
+              name="username"
+              class="form__input"
+              id="username"
+            />
+            <p id="error__message" class="error__message">Error Message</p>
           </div>
           <div class="form__input-container">
-            <label for="">Email</label>
-            <input type="email" name="email" class="form__input" />
+            <label>Email</label>
+            <input type="text" name="email" id="email" class="form__input" />
+            <p id="error__message" class="error__message">Error Message</p>
           </div>
           <div class="form__input-container">
             <label for="">Password</label>
-            <input type="password" name="password" class="form__input" />
+            <input
+              type="password"
+              name="password"
+              id="password"
+              class="form__input"
+            />
+            <p id="error__message" class="error__message">Error Message</p>
           </div>
           <div class="form__input-container">
-            <label for="">Retype Password</label>
-            <input type="password" name="retype-password" class="form__input" />
+            <label for="">Confirm Password</label>
+            <input
+              type="password"
+              name="retype-password"
+              id="password2"
+              class="form__input"
+            />
+            <p id="error__message" class="error__message">Error Message</p>
           </div>
           <div class="form__button-container">
             <button class="btn" type="submit" value="button">Submit</button>
@@ -37,5 +56,7 @@
         </form>
       </div>
     </div>
+
+    <script src="./script/app.js"></script>
   </body>
 </html>
